# pso-integration

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  cog.toml
.github/actions/build-binaries/: action.yml
.github/actions/configure-private-git/: action.yml
.github/actions/publish-image/: action.yml
.github/actions/rust-check/: action.yml
.github/actions/rust-test/: action.yml
.github/workflows/: ci.yml  release.yml  testsuite-image.yml
cli/pso-attester-cli/: Cargo.toml
cli/pso-attester-cli/src/: client.rs  main.rs
cli/pso-attester-cli/src/commands/: mint_su.rs  mod.rs  register_ar.rs  register_sr.rs
cli/pso-sra-cli/: Cargo.toml
cli/pso-sra-cli/src/: client.rs  main.rs
cli/pso-sra-cli/src/commands/: mint_su.rs  mod.rs  register_ar.rs  register_sr.rs
cli/pso-wallet-cli/: Cargo.toml
cli/pso-wallet-cli/src/: artifacts.rs  client.rs  main.rs
cli/pso-wallet-cli/src/commands/: aggregate.rs  mod.rs  prepare_su.rs  prove_td_full.rs  submit_td.rs
cli/pso-zk-cli/: .gitignore  Cargo.toml
cli/pso-zk-cli/src/: display.rs  lib.rs  main.rs  types.rs
cli/pso-zk-cli/src/commands/: aggregate.rs  mod.rs  nft.rs  proof.rs
cli/pso-zk-cli/tests/: commands.rs
crates/pso-attester-integration/: Cargo.toml  README.md
crates/pso-attester-integration/.cargo/: config.toml
crates/pso-attester-integration/kotlin/: .gitignore  build.gradle.kts  mise.toml  settings.gradle.kts  uniffi.toml
crates/pso-attester-integration/kotlin/src/main/kotlin/net/pso/integration/agent/: NativeLoader.kt
crates/pso-attester-integration/kotlin/src/main/kotlin/net/pso/integration/attester/: NativeLoader.kt
crates/pso-attester-integration/kotlin/src/test/kotlin/net/pso/integration/agent/: AttesterIntegrationTest.kt  SraIntegrationTest.kt
crates/pso-attester-integration/python/: .gitignore  README.md  pyproject.toml  setup.py  uniffi.toml
crates/pso-attester-integration/python/pso_attester_integration/: __init__.py
crates/pso-attester-integration/src/: lib.rs
crates/pso-integrations-shared/: Cargo.toml
crates/pso-integrations-shared/src/: lib.rs  witness.rs
crates/pso-l2-client/: Cargo.toml
crates/pso-l2-client/src/: abi.rs  artifacts.rs  client.rs  contract_errors.rs  error.rs  lib.rs  shared_key.rs  sra.rs  wallet.rs
crates/pso-l2-e2e-tests/: Cargo.toml
crates/pso-l2-e2e-tests/src/: env.rs  hardhat.rs  lib.rs  scenario.rs
crates/pso-l2-e2e-tests/src/clients/: envelope.rs  sra.rs
crates/pso-l2-e2e-tests/tests/: full_flow.rs  runner.rs  scenarios.rs
crates/pso-l2-e2e-tests/tests/scenarios/: s001_happy_flow.rs  s002_sra_cannot_td_via_agents_pool.rs  s003_wallet_cannot_register_sr.rs  s004_wallet_cannot_register_ar.rs  s005_wallet_cannot_mint_su.rs  s006_sra_cannot_use_actor_endpoint.rs  s007_sr_duplicate_id_rejected.rs  s008_sr_id_zero_rejected.rs  s009_su_with_foreign_sr_rejected.rs  s010_su_double_spend_rejected.rs  s011_su_with_nonexistent_sr_rejected.rs  s012_td_empty_array_rejected.rs
crates/pso-mobile-integration/: Cargo.toml  README.md
crates/pso-mobile-integration/examples/react-native/: README.md  spendingUnitProof.ts  tributeFlow.ts  types.ts  useProofGeneration.ts
crates/pso-mobile-integration/kotlin/: .gitignore  build.gradle.kts  mise.toml  settings.gradle.kts  uniffi.toml
crates/pso-mobile-integration/kotlin/src/main/kotlin/net/pso/zk/integration/mobile/: NativeLoader.kt
crates/pso-mobile-integration/kotlin/src/test/kotlin/net/pso/zk/integration/mobile/: SmokeTest.kt
crates/pso-mobile-integration/src/: api.rs  circuits.rs  convert.rs  dev_tools.rs  lib.rs  schnorr.rs  types.rs  vdf.rs
crates/pso-sra-integration/: Cargo.toml  README.md  build.rs
crates/pso-sra-integration/kotlin/: .gitignore  build.gradle.kts  mise.toml  uniffi.toml
crates/pso-sra-integration/kotlin/src/main/kotlin/net/pso/integration/agent/: NativeLoader.kt
crates/pso-sra-integration/kotlin/src/main/kotlin/net/pso/zk/integration/sra/: NativeLoader.kt
crates/pso-sra-integration/kotlin/src/test/kotlin/net/pso/zk/integration/sra/: SraIntegrationTest.kt
crates/pso-sra-integration/src/: error.rs  lib.rs
docs/: aggregation-redesign.md
domain/pso-nft/: Cargo.toml  README.md
domain/pso-nft/src/: lib.rs
testsuite/: Cargo.toml  Dockerfile  README.md
testsuite/src/: bls_verify.rs  bridge.rs  cli.rs  data.rs  env.rs  errors.rs  hardhat.rs  lib.rs  main.rs  scenario.rs
testsuite/src/clients/: actor.rs  admin.rs  attester.rs  contract_errors.rs  contracts.rs  envelope.rs  mod.rs  rpc.rs  sra.rs
testsuite/src/scenarios/: mod.rs  s001_happy_flow.rs  s002_attester_cannot_td_via_agents_pool.rs  s002_sra_cannot_td_via_agents_pool.rs  s003_wallet_cannot_register_sr.rs  s004_wallet_cannot_register_ar.rs  s005_wallet_cannot_mint_su.rs  s006_attester_cannot_use_actor_endpoint.rs  s006_sra_cannot_use_actor_endpoint.rs  s007_sr_duplicate_id_rejected.rs  s008_sr_id_zero_rejected.rs  s009_su_with_foreign_sr_rejected.rs  s010_su_double_spend_rejected.rs  s011_su_with_nonexistent_sr_rejected.rs  s012_td_empty_array_rejected.rs  s013_envelope_bad_magic_rejected.rs  s014_envelope_nullifier_replay_rejected.rs  s015_envelope_stale_submitted_block_rejected.rs  s016_envelope_bad_vdf_proof_rejected.rs  s017_envelope_wrong_vdf_output_rejected.rs  s018_td_malformed_aggregation_proof_rejected.rs  s019_td_invalid_aggregation_proof_rejected.rs  s020_su_with_foreign_ar_rejected.rs  s021_td_su_not_found_rejected.rs  s022_td_not_same_worldwide_day_rejected.rs  s023_td_not_same_currency_rejected.rs  s024_td_aggregation_tier_unavailable_rejected.rs  s025_sr_invalid_metadata_rejected.rs  s026_su_invalid_amount_rejected.rs  s027_registry_not_admin_rejected.rs  s028_registry_zero_address_rejected.rs  s029_registry_invalid_mask_rejected.rs  s030_attester_not_active_rejected.rs  s030_sra_not_active_rejected.rs  s031_envelope_wrong_difficulty_rejected.rs  s032_envelope_previous_difficulty_accepted.rs  s033_revoked_attester_submit_rejected.rs  s033_revoked_sra_submit_rejected.rs  s034_registry_already_registered_rejected.rs  s035_update_mask_round_trip.rs  (+12 more)
testsuite/tests/: framework.rs
(+1 files in other folders)
