[workspace.package]
version = "0.3.7"
edition = "2021"

[workspace]
members = [
    "crates/pso-mobile-integration",
    "crates/pso-integrations-shared",
    "crates/pso-sra-integration",
    "crates/pso-l2-client",
    "cli/pso-zk-cli",
    "cli/pso-sra-cli",
    "cli/pso-wallet-cli",
    "domain/pso-nft",
    "testsuite",
]
resolver = "2"

[workspace.dependencies]
# Sibling-repo crates.
# - `pso-protocol` and `pso-zk-canonical` are published to crates.io
#   and consumed from the registry.
# - `pso-zk-circuit-noir` is not on crates.io (it vendors `noir_rs`
#   which transitively depends on git-only `noir-lang/noir` crates);
#   consumed via git+tag. It re-exports the noir_rs proving glue
#   downstream consumers in this workspace need, so we no longer
#   carry a separate `noir_rs` dep or the `[patch.zkpassport/noir_rs]`
#   override here.
pso-protocol         = "0.2"
pso-zk-canonical     = "0.2"
pso-zk-circuit-noir  = { git = "ssh://git@github.com/psonet/pso-zk-circuits.git", tag = "v0.2.5" }

# Crates internal to this workspace
pso-nft                  = { path = "domain/pso-nft" }
pso-integrations-shared  = { path = "crates/pso-integrations-shared" }
pso-l2-client            = { path = "crates/pso-l2-client" }

# External
pso-poseidon = "0.3"
# MinRoot VDF over BLS12-381. Used by `pso-mobile-integration::vdf` for
# the proof-of-personhood challenge wallets attach to Users-pool txs.
pso-vdf      = "0.2"
k256         = { version = "0.14.0-rc.8", features = ["std"] }
ark-ff       = { version = "0.5", features = ["asm", "parallel"] }
ark-bn254    = { version = "0.5", features = ["default"] }
bs58 = "0.5"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
generic-array = "0.14"
chrono = "0.4"
iso_currency = "0.5"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
once_cell = "1"
hex = "0.4"

# Alloy umbrella — used by `pso-l2-client` for L2 RPC interaction.
# The umbrella crate bundles every alloy submodule with version-aligned
# pinning, sparing us a multi-crate dependency matrix.
alloy = { version = "1.0", features = [
    "sol-types",
    "contract",
    "providers",
    "signer-local",
    "network",
    "rpc-types-eth",
    "reqwest",
] }

# Async runtime — needed by the L2 client + CLIs + e2e tests.
tokio = { version = "1", features = ["full"] }
# Result/error glue at binary edges.
eyre  = "0.6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Same profile shape as pso-zk-circuits — proving times collapse
# under opt-level=3 even in dev.
[profile.dev]
opt-level = 3
debug = 2
overflow-checks = true
incremental = true

[profile.local]
inherits = "dev"
opt-level = 3
debug = 2
debug-assertions = false
panic = 'unwind'
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
overflow-checks = false
debug = false

# Size-optimized profile for mobile builds (iOS/Android).
[profile.mobile]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
