[workspace.package]
version = "0.8.4"
edition = "2021"

[workspace]
members = [
    "crates/pso-mobile-integration",
    "crates/pso-attester-integration",
    # --- FOLLOW-UP pass (testsuite rework). Temporarily out of the workspace so
    # the FFI crates above build standalone; these still use the old 0.7 surface.
    # `pso-l2-client` is slated for removal: its sol! ABI is superseded by
    # `pso-chain-abi` and the e2e testsuite will stand up its own two eth-style
    # clients (SRA + wallet) directly on alloy + pso-protocol + the FFI crates.
    # ("pso-nft" and "pso-integrations-shared" were already deleted — their
    # functions moved to pso-chain-abi / pso-protocol / pso-zk-canonical.)
    # "crates/pso-l2-client",
    # "cli/pso-zk-cli",
    # "cli/pso-sra-cli",
    # "cli/pso-wallet-cli",
    # "testsuite",
]
resolver = "2"

[workspace.dependencies]
# Sibling-repo crates — the generic pso-protocol 0.8 / zk 0.9 stack.
# - `pso-protocol` (0.8, generic `Suite`/`PsoV1` rewrite, Poseidon2, ark 0.6)
#   and `pso-zk-canonical` (0.9, registry circuit descriptors) are on crates.io.
# - `pso-zk-backend` (renamed from `pso-zk-circuit-noir`) holds the toolchain
#   coupling (acvm solve + barretenberg FFI); not on crates.io (git-only noir
#   deps), so consumed via git+tag. It's generic over the core circuit seams.
# - `pso-chain-abi` provides the typed SpendingUnit/TributeDraft entity structs;
#   consumed from pso-chain-next via git until it's published to crates.io.
pso-protocol         = "0.8"
pso-zk-canonical     = "0.9"
pso-zk-backend       = { git = "ssh://git@github.com/psonet/pso-zk-circuits.git", tag = "v0.9.0" }
pso-chain-abi        = { git = "ssh://git@github.com/psonet/pso-chain-next.git", branch = "feat/protocol-0.8" }

# Crates internal to this workspace. (pso-nft + pso-integrations-shared deleted —
# entities now come from pso-chain-abi, witness/crypto from pso-protocol +
# pso-zk-canonical. The l2-client path dep is retained only for the deferred
# testsuite, and is slated for removal in that rework.)
pso-l2-client            = { path = "crates/pso-l2-client" }

# External
pso-poseidon = "0.4"
# MinRoot VDF over BLS12-381. Used by `pso-mobile-integration::vdf` for
# the proof-of-personhood challenge wallets attach to Users-pool txs.
pso-vdf      = "0.2"
k256         = { version = "0.14.0-rc.8", features = ["std"] }
ark-ff       = { version = "0.6", features = ["asm", "parallel"] }
ark-bn254    = { version = "0.6", features = ["default"] }
ark-std      = { version = "0.6", default-features = false }
bs58 = "0.5"
rand = "0.8"
# Standalone alloy ABI primitives (Address/B256/Uint) for the attester's
# entity construction — lighter than the full `alloy` umbrella below.
alloy-primitives = { version = "1", default-features = false, features = ["std"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
generic-array = "0.14"
chrono = "0.4"
iso_currency = "0.5"
clap = { version = "4", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
once_cell = "1"
hex = "0.4"

# Alloy umbrella — used by `pso-l2-client` for L2 RPC interaction.
# The umbrella crate bundles every alloy submodule with version-aligned
# pinning, sparing us a multi-crate dependency matrix.
alloy = { version = "1.0", features = [
    "sol-types",
    "contract",
    "providers",
    "signer-local",
    "network",
    "rpc-types-eth",
    "reqwest",
] }

# Async runtime — needed by the L2 client + CLIs + e2e tests.
tokio = { version = "1", features = ["full"] }
# Result/error glue at binary edges.
eyre  = "0.6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Same profile shape as pso-zk-circuits — proving times collapse
# under opt-level=3 even in dev.
[profile.dev]
opt-level = 3
debug = 2
overflow-checks = true
incremental = true

[profile.local]
inherits = "dev"
opt-level = 3
debug = 2
debug-assertions = false
panic = 'unwind'
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
overflow-checks = false
debug = false

# Size-optimized profile for mobile builds (iOS/Android).
[profile.mobile]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
