[workspace.package]
version = "0.13.1"
edition = "2021"

[workspace]
members = [
    "crates/pso-mobile-integration",
    "crates/pso-attester-integration",
    # The e2e testsuite owns its own client layer (alloy RPC handle + typed
    # contract-error decoder), built directly on alloy + pso-chain-abi +
    # pso-protocol + the FFI crates. The three CLIs consume the same deps
    # directly. (`pso-l2-client`, `pso-nft`, and `pso-integrations-shared`
    # were removed — their surface moved to pso-chain-abi / pso-protocol /
    # pso-zk-canonical and the testsuite's own modules.)
    "cli/pso-zk-cli",
    "cli/pso-attester-cli",
    "cli/pso-wallet-cli",
    "testsuite",
]
resolver = "2"

[workspace.dependencies]
# Sibling-repo crates — the generic pso-protocol 0.9 / zk 0.11 stack
# (sorted-set entity-hash encoding).
# - `pso-protocol` (0.9, generic `Suite`/`PsoV1` rewrite, Poseidon2, ark 0.6)
#   and `pso-zk-canonical` (0.11, registry circuit descriptors) are on crates.io.
# - `pso-zk-backend` (renamed from `pso-zk-circuit-noir`) holds the toolchain
#   coupling (acvm solve + barretenberg FFI); not on crates.io (git-only noir
#   deps), so consumed via git+tag. It's generic over the core circuit seams.
# - `pso-chain-abi` provides the typed SpendingUnit/TributeDraft entity structs;
#   on crates.io (0.7.0, pso-chain-next, sorted-set entity hash).
#   default-features = false at the workspace level → entity-only (alloy-primitives
#   + #[derive(Entity)], no alloy-contract/tokio/reqwest). The native FFI libs
#   (mobile/attester) inherit that; consumers needing the `#[sol(rpc)]` surface
#   (testsuite + the alloy-RPC CLIs) opt back in with features = ["interfaces"].
pso-protocol         = "0.9"
pso-zk-canonical     = "0.11"
# default-features = false at the workspace level so the SRS network fallback
# (reqwest + tokio) is opt-IN per consumer: the mobile slices build without it
# (app-provided SRS), while pso-zk-cli + the mobile crate's default feature
# re-enable `with-network-srs` for dev/CI proving.
pso-zk-backend       = { git = "ssh://git@github.com/psonet/pso-zk-circuits.git", tag = "v0.11.0", default-features = false }
pso-chain-abi        = { version = "0.11.0", default-features = false }

# In-workspace FFI path deps. The testsuite + CLIs consume these directly
# (alongside pso-chain-abi / pso-protocol) — there is no shared "l2-client"
# library crate anymore; each consumer wires its own thin alloy RPC handle.
pso-mobile-integration   = { path = "crates/pso-mobile-integration" }
pso-attester-integration = { path = "crates/pso-attester-integration" }

# External
pso-poseidon = "0.4"
# MinRoot VDF over BLS12-381. Used by `pso-mobile-integration::vdf` for
# the proof-of-personhood challenge wallets attach to Users-pool txs.
pso-vdf      = "0.2"
k256         = { version = "0.14.0-rc.8", features = ["std"] }
ark-ff       = { version = "0.6", features = ["asm", "parallel"] }
ark-bn254    = { version = "0.6", features = ["default"] }
ark-std      = { version = "0.6", default-features = false }
bs58 = "0.5"
rand = "0.8"
# Standalone alloy sub-crates, version-matched to `pso-chain-abi`
# (provider/contract/network/signer/consensus/eips/rpc-types = "2",
# primitives/sol-types = "1"). The `alloy` umbrella v1.x re-exports the
# 1.x provider/contract sub-crates, which are ABI-incompatible with the
# 2.x `Provider`/contract instances `pso-chain-abi`'s `sol!` bindings
# generate — so the testsuite + CLIs consume the sub-crates directly to
# keep a single `alloy_provider`/`alloy_contract` in the graph.
alloy-primitives    = { version = "1", default-features = false, features = ["std"] }
alloy-sol-types     = { version = "1", features = ["json"] }
alloy-provider      = { version = "2", default-features = false, features = ["reqwest"] }
alloy-contract      = { version = "2", default-features = false }
alloy-network       = "2"
alloy-signer        = "2"
alloy-signer-local  = "2"
alloy-consensus     = { version = "2", features = ["serde"] }
alloy-eips          = { version = "2", features = ["serde"] }
alloy-rpc-types-eth = "2"
alloy-transport-http = { version = "2", features = ["reqwest"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
generic-array = "0.14"
chrono = "0.4"
iso_currency = "0.5"
clap = { version = "4", features = ["derive", "env"] }
hmac = "0.12"
sha2 = "0.10"
once_cell = "1"
hex = "0.4"
# BLS12-381 threshold-cert verification for the cert-inclusion e2e scenario
# (S046). The exact crate + version the chain SIGNS with, so the off-chain
# verify is byte-compatible by construction; `blst` decompresses the EIP-2537
# G2 group key read from the DaInbox into commonware's point format.
commonware-cryptography = "2026.5.0"
# commonware-codec: the Encode/Decode traits for commonware's BLS point types
# (group key / signature), version-matched to commonware-cryptography.
commonware-codec = "2026.5.0"
blst = "0.3.16"

# Async runtime — needed by the L2 client + CLIs + e2e tests.
tokio = { version = "1", features = ["full"] }
# Result/error glue at binary edges.
eyre  = "0.6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Same profile shape as pso-zk-circuits — proving times collapse
# under opt-level=3 even in dev.
[profile.dev]
opt-level = 3
debug = 2
overflow-checks = true
incremental = true

[profile.local]
inherits = "dev"
opt-level = 3
debug = 2
debug-assertions = false
panic = 'unwind'
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
overflow-checks = false
debug = false

# Max-optimization profile for the mobile/wallet native libs (iOS staticlib +
# Android cdylib). Proving runs on-device, so optimize for speed: opt-level 3 +
# fat LTO + a single codegen unit, then `strip` for a lean artifact.
#
# We deliberately keep the default `unwind` (NOT panic = "abort"): UniFFI wraps
# every exported call in `catch_unwind` to turn a Rust panic into a catchable
# binding-side error. Under panic = "abort" a panic in proving/ark/bb code would
# abort the whole host app instead — unacceptable for a wallet. The unwind-table
# size cost is small; the rest of the speed win is unaffected.
[profile.mobile]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
