[package]
name        = "pso-e2e-testsuite"
version.workspace = true
edition.workspace = true
description = "Standalone CLI binary that exercises the PSO L2 end-to-end against a running devnet (agents pool + actor pool)."
publish     = false

# Two-surface crate: a `lib` exposing the scenario framework (so the
# unit tests under `tests/` can re-use the same modules), plus a
# `bin` driving the suite from the CLI. The bin is the artifact
# pso-chain CI packages as a Docker image.
[lib]
name = "pso_e2e_testsuite"
path = "src/lib.rs"

[[bin]]
name = "pso-e2e"
path = "src/main.rs"

[dependencies]
# The testsuite owns its client layer (a thin alloy RPC handle + the
# typed contract-error decoder), built directly on these. The two FFI
# crates are the surfaces real Kotlin/JVM + React-Native clients consume
# via UniFFI; driving the bridge through them exercises the same public
# surface real clients hit.
pso-chain-abi.workspace            = true
pso-protocol.workspace             = true
pso-vdf.workspace                  = true
pso-mobile-integration.workspace   = true
pso-attester-integration.workspace = true

# RPC / signing / ABI — standalone alloy sub-crates, version-matched to
# pso-chain-abi (a single alloy_provider/alloy_contract in the graph).
alloy-primitives.workspace         = true
alloy-sol-types.workspace          = true
alloy-provider.workspace           = true
alloy-contract.workspace           = true
alloy-network.workspace            = true
alloy-signer.workspace             = true
alloy-signer-local.workspace       = true
alloy-consensus.workspace          = true
alloy-eips.workspace               = true
alloy-rpc-types-eth.workspace      = true
alloy-transport-http.workspace     = true

# BN254 scalar field — on-chain SR/AR/SU/TD ids are canonical field
# elements (the SU/TD-hash precompiles reject `>=` modulus), so the id
# generator samples `Fr` directly.
ark-bn254.workspace                = true
ark-ff.workspace                   = true
ark-std.workspace                  = true

# secp256k1 key material for address derivation in the env bootstrap.
k256.workspace                     = true

# Local error glue for the RPC handle.
thiserror.workspace                = true

# Random generators (su_nonce, nullifier, test ids).
rand.workspace                     = true

# Hex / JSON utility belt.
hex.workspace                      = true
serde_json.workspace               = true

# Async runtime + error glue at binary edges.
tokio.workspace                    = true
eyre.workspace                     = true

# Tracing — `init_tracing` wires the binary's `-v/-vv/-vvv` flags into
# the standard `tracing_subscriber` filter.
tracing.workspace                  = true
tracing-subscriber.workspace       = true

# Hash + currency helpers used by the data generators.
sha2.workspace                     = true
chrono.workspace                   = true
iso_currency.workspace             = true

# CLI parsing.
clap.workspace                     = true

# Scenario trait (`#[async_trait]`) — same crate the legacy
# `pso-l2-e2e-tests` used.
async-trait                        = "0.1"

# `Serialize` derives for the JSON report.
serde = { workspace = true }

[dev-dependencies]
# Unit tests under `tests/framework.rs` exercise envelope encoding,
# the typed error decoder, and the data generators. They do NOT
# require a running L2 node; `cargo test -p pso-e2e-testsuite --lib`
# stays useful in dev.
