[package]
name        = "pso-sra-cli"
version.workspace = true
edition.workspace = true
description = "CLI for PSO SRA-side L2 operations: register SR / amendment records, mint SpendingUnits."

[[bin]]
name = "pso-sra-cli"
path = "src/main.rs"

[dependencies]
pso-l2-client.workspace = true

alloy.workspace      = true
clap.workspace       = true
tokio.workspace      = true
eyre.workspace       = true
hex.workspace        = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace            = true
tracing-subscriber.workspace = true
