[package]
name        = "pso-wallet-cli"
version.workspace = true
edition.workspace = true
description = "CLI for PSO wallet-side L2 operations: prepare SUs, aggregate proofs, submit TributeDrafts, generate full proofs."

[[bin]]
name = "pso-wallet-cli"
path = "src/main.rs"

[dependencies]
pso-l2-client.workspace = true

alloy.workspace      = true
clap.workspace       = true
tokio.workspace      = true
eyre.workspace       = true
hex.workspace        = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace            = true
tracing-subscriber.workspace = true
