[package]
name        = "pso-wallet-cli"
version.workspace = true
edition.workspace = true
description = "CLI for PSO wallet-side L2 operations: prepare SUs, aggregate proofs, submit TributeDrafts, generate full proofs."

[[bin]]
name = "pso-wallet-cli"
path = "src/main.rs"

[dependencies]
# Wallet flows (witness + aggregation) via the mobile FFI; TD submit via
# the pso-chain-abi interface on a local alloy RPC handle.
pso-chain-abi = { workspace = true, features = ["interfaces"] }
pso-mobile-integration.workspace = true
pso-protocol.workspace           = true

alloy-primitives.workspace     = true
alloy-provider.workspace       = true
alloy-contract.workspace       = true
alloy-network.workspace        = true
alloy-signer.workspace         = true
alloy-signer-local.workspace   = true
alloy-transport-http.workspace = true
clap.workspace       = true
tokio.workspace      = true
eyre.workspace       = true
hex.workspace        = true
serde.workspace      = true
serde_json.workspace = true
tracing.workspace            = true
tracing-subscriber.workspace = true
