[package]
name = "pso-zk-cli"
version.workspace = true
edition = "2021"
description = "CLI for PSO ZK proof operations: NFT generation, proof generation, and verification"

[[bin]]
name = "pso-zk-cli"
path = "src/main.rs"

[lib]
name = "pso_zk_cli"
path = "src/lib.rs"

[dependencies]
# Workspace crates: keys/hashes via pso-protocol (Suite/PsoV1/Codec),
# proving via pso-zk-canonical (circuit descriptors) + pso-zk-backend
# (Barretenberg), entities from pso-chain-abi.
pso-protocol.workspace = true
# Opt back into the SRS network fallback (the workspace pins it default-off):
# a dev CLI proving locally downloads/caches the CRS rather than bundling it.
pso-zk-backend = { workspace = true, features = ["with-network-srs"] }
pso-zk-canonical.workspace = true
pso-chain-abi.workspace = true

# alloy ABI primitives (Address/B256/U16/U64) for the entity fields.
alloy-primitives.workspace = true

# CLI argument parsing
clap.workspace = true

# Tabular console output
tabled = "0.20"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Encoding
hex.workspace = true

# Field/curve RNG for entity + nonce generation.
ark-std.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile = "3"
