[package]
name        = "pso-l2-e2e-tests"
version.workspace = true
edition.workspace = true
description = "End-to-end integration tests exercising the full SRA + Wallet L2 flow programmatically."
publish     = false

[lib]
path = "src/lib.rs"

[dependencies]
pso-l2-client.workspace            = true
pso-integrations-shared.workspace  = true
pso-protocol.workspace             = true
pso-vdf.workspace                  = true
alloy.workspace                    = true
ark-bn254.workspace                = true
ark-ff.workspace                   = true
k256.workspace                     = true
rand.workspace                     = true
hex.workspace                      = true
serde_json.workspace               = true
tokio.workspace                    = true
eyre.workspace                     = true
tracing.workspace                  = true
tracing-subscriber.workspace       = true

[dev-dependencies]
# These integration tests require a running L2 node. By default they
# are `#[ignore]`d; opt in via `cargo test -p pso-l2-e2e-tests -- --ignored`
# and `PSO_L2_RPC=http://...` in the environment.
