[package]
name        = "pso-l2-e2e-tests"
version.workspace = true
edition.workspace = true
description = "End-to-end integration tests exercising the full SRA + Wallet L2 flow programmatically."
publish     = false

[lib]
path = "src/lib.rs"

[dependencies]
pso-l2-client.workspace            = true
pso-integrations-shared.workspace  = true
pso-protocol.workspace             = true
pso-vdf.workspace                  = true
pso-nft.workspace                  = true
# Used for `compute_vdf` helper + UniFFI-free types — we currently
# duplicate the canonical `vdf_input` construction locally rather than
# pull in the staticlib mobile crate. Kept as a path dep so the wider
# workspace can evolve the helpers in lockstep.
pso-mobile-integration             = { path = "../pso-mobile-integration" }
alloy.workspace                    = true
ark-bn254.workspace                = true
ark-ff.workspace                   = true
k256.workspace                     = true
rand.workspace                     = true
hex.workspace                      = true
serde_json.workspace               = true
tokio.workspace                    = true
eyre.workspace                     = true
tracing.workspace                  = true
tracing-subscriber.workspace       = true
sha2.workspace                     = true
chrono.workspace                   = true
iso_currency.workspace             = true
async-trait                        = "0.1"
serial_test                        = "3"

[dev-dependencies]
# Integration tests require a running L2 node. By default they are
# `#[ignore]`d; opt in via
# `cargo test -p pso-l2-e2e-tests -- --ignored`
# with `PSO_L2_RPC=http://...` / `PSO_L2_ACTOR_RPC=http://...` in env.
