[package]
name = "pso-mobile-integration"
version.workspace = true
edition = "2021"
description = "Mobile-friendly UniFFI wrapper for PSO ZK proof generation (wallet side)"

[lib]
crate-type = [
    "staticlib", # for iOS
    "cdylib",    # for Android
    # rlib so in-workspace Rust consumers (the e2e testsuite's cross-surface
    # regression test) can link against the mobile UniFFI surface.
    "rlib",
]
name = "pso_mobile_integration"

[dependencies]
# The generic 0.8/0.9 stack: protocol formulas + canonical circuits + the
# barretenberg proving backend (UltraHonkKeccak via FFI; the wallet proves
# on-device).
pso-protocol.workspace = true
pso-zk-canonical.workspace = true
pso-zk-backend.workspace = true
ark-std.workspace = true
# MinRoot VDF (BLS12-381) — the proof-of-personhood challenge the wallet
# attaches to Users-pool txs. Slow `eval` runs on a background thread.
pso-vdf = { workspace = true, features = ["std"] }

# Mozilla UniFFI — generates the C-ABI scaffolding + foreign-language bindings
# (Kotlin/Swift/Python) from `#[uniffi::export]`.
uniffi = { version = "0.31", features = ["cli"] }
thiserror = "2"
# Domain-separated per-purpose RNG derivation from the wallet seed.
sha2.workspace = true

# Generates the foreign bindings, e.g. `cargo run --bin uniffi-bindgen-mobile
# -- generate --library <dylib> --language kotlin --out-dir <dir>`.
[[bin]]
name = "uniffi-bindgen-mobile"
path = "uniffi-bindgen.rs"
